--- a/src/utils/globalColor.less
+++ b/src/utils/globalColor.less
@@ -3,6 +3,7 @@
 @fontColor: #333333;
 @contrastColor: #fff;  //字体反差色
 @activeFontColor: #313132;
+@asideBgColor:#F6F6F7;
 
 @singerColor: #999999;
 
