--- a/src/utils/iconfont/iconfont.css
+++ b/src/utils/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 3541824 */
-  src: url('iconfont.woff2?t=1662951263933') format('woff2'),
-       url('iconfont.woff?t=1662951263933') format('woff'),
-       url('iconfont.ttf?t=1662951263933') format('truetype');
+  src: url('iconfont.woff2?t=1663679490865') format('woff2'),
+       url('iconfont.woff?t=1663679490865') format('woff'),
+       url('iconfont.ttf?t=1663679490865') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-yangshengqi:before {
+  content: "\e600";
 }
 
 .icon-folder:before {
