--- a/src/utils/globalColor.less
+++ b/src/utils/globalColor.less
@@ -1,21 +1,21 @@
 // 全局颜色
 @bgColor: #ec4141;
 @fontColor: #333333;
-@contrastColor: #fff;  //字体反差色
+@contrastColor: #fff; //字体反差色
 @activeFontColor: #313132;
-@asideBgColor:#F6F6F7;
+@asideBgColor: #f6f6f7;
 
-@gold:#E7AA5A;
+@gold: #e7aa5a;
 
 @singerColor: #999999;
 
+@borderColor: #e0e0e0;
 
-@borderColor:#E0E0E0;
-
-@boxShadowColor:#DCDBDB;
-
+@boxShadowColor: #dcdbdb;
 
 @userInfoColor: #fbd9d9;
 
-@hoverColor:rgb(235,235,235);
-@bgColor-latest:#BBBBBB;
+@hoverColor:#EBEBEB;
+@bgColor-latest: #bbbbbb;
+
+@userColor: #937db5;
