--- a/src/utils/globalStyle.less
+++ b/src/utils/globalStyle.less
@@ -1,49 +1,57 @@
-// 全局样式
 
-.positions(@top,@left) {
-  position: absolute;
-  top: @top;
-  left: @left;
-  transform: translateX(-50%);
-}
-.pointer {
-  cursor: pointer;
+.overflow{
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
 }
 
-.flex(@justify,@align) {
-  display: flex;
-  justify-content: @justify;
-  align-items: @align;
+.overflowMul(@num){
+	overflow: hidden;
+	text-overflow: ellipsis;
+	display: -webkit-box;
+	-webkit-box-orient: vertical;
+	-webkit-line-clamp: @num;
 }
 
-.bgSrc(@url,@left,@top) {
-  background-image: url(@url);
-  background-repeat: no-repeat;
-  background-position: @left @top;
+.flex(@justify, @align){
+	display: flex;
+	justify-content: @justify;
+	align-items: @align;
 }
 
-.overflow {
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
+.positions(@top, @left){
+	position: absolute;
+	top: @top;
+	left: @left;
+	transform: translateX(-@left);
+	// top: @top;
 }
 
-.overflowMul(@num) {
-  overflow: hidden;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: @num;
+.bgSrc(@src, @left, @top){
+	background-image: url(@src);
+	background-position: @left @top;
 }
 
-// 取消个别默认样式
-
-
-ul {
-  list-style: none;
-  padding-left: 0;
+a{
+	text-decoration: none;
+	color: inherit;
 }
 
+ul{
+	// list-style: none;
+	margin: 0;
+}
+li{
+	list-style: none;
+}
+p{
+	margin: 0;
+}
 
-a {
-  text-decoration: none;
+.pointer{
+	cursor: pointer;
+}
+
+.default{
+	cursor: default;
 }
