--- a/src/utils/globalStyle.less
+++ b/src/utils/globalStyle.less
@@ -19,6 +19,12 @@
 	align-items: @align;
 }
 
+.flexCenter{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
 .positions(@top, @left){
 	position: absolute;
 	top: @top;
@@ -40,6 +46,7 @@ a{
 ul{
 	// list-style: none;
 	margin: 0;
+	padding-left: 0;
 }
 li{
 	list-style: none;
