--- a/src/utils/iconfont/iconfont.css
+++ b/src/utils/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 3541824 */
-  src: url('iconfont.woff2?t=1664981933691') format('woff2'),
-       url('iconfont.woff?t=1664981933691') format('woff'),
-       url('iconfont.ttf?t=1664981933691') format('truetype');
+  src: url('iconfont.woff2?t=1665821798280') format('woff2'),
+       url('iconfont.woff?t=1665821798280') format('woff'),
+       url('iconfont.ttf?t=1665821798280') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,26 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-man:before {
+  content: "\e603";
+}
+
+.icon-woman:before {
+  content: "\e667";
+}
+
+.icon-pull-up:before {
+  content: "\eb6e";
+}
+
+.icon-pull-down:before {
+  content: "\eb6d";
+}
+
+.icon-download:before {
+  content: "\e668";
 }
 
 .icon-arrow-down:before {
