--- a/src/utils/iconfont/iconfont.css
+++ b/src/utils/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 3541824 */
-  src: url('iconfont.woff2?t=1665821798280') format('woff2'),
-       url('iconfont.woff?t=1665821798280') format('woff'),
-       url('iconfont.ttf?t=1665821798280') format('truetype');
+  src: url('iconfont.woff2?t=1666533488560') format('woff2'),
+       url('iconfont.woff?t=1666533488560') format('woff'),
+       url('iconfont.ttf?t=1666533488560') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,14 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-delete:before {
+  content: "\e69d";
+}
+
+.icon-email:before {
+  content: "\e63a";
 }
 
 .icon-man:before {
