--- a/src/utils/iconfont/iconfont.css
+++ b/src/utils/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 3541824 */
-  src: url('iconfont.woff2?t=1666533488560') format('woff2'),
-       url('iconfont.woff?t=1666533488560') format('woff'),
-       url('iconfont.ttf?t=1666533488560') format('truetype');
+  src: url('iconfont.woff2?t=1667481315010') format('woff2'),
+       url('iconfont.woff?t=1667481315010') format('woff'),
+       url('iconfont.ttf?t=1667481315010') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,22 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-question-mark:before {
+  content: "\e72d";
+}
+
+.icon-down:before {
+  content: "\e790";
+}
+
+.icon-up:before {
+  content: "\e791";
+}
+
+.icon-fire:before {
+  content: "\e6e7";
 }
 
 .icon-delete:before {
