重新修改并引入歌曲列表组件

--- a/src/utils/globalStyle.less
+++ b/src/utils/globalStyle.less
@@ -84,6 +84,14 @@ p {
   color: #222;
 }
 
+.hoverFont:hover {  // 逐渐取代上面那个
+  color: #222;
+}
+
+.hoverBg:hover{
+  background-color: #F2F2F2;
+}
+
 .singerHover:hover {
   color: #888 !important;
 }
