--- a/src/utils/globalStyle.less
+++ b/src/utils/globalStyle.less
@@ -33,6 +33,13 @@
   transform: translateX(-@left);
   // top: @top;
 }
+// 水平方向 偏移(居中）
+.positionX(@left,@top) {
+  position: absolute;
+  top: @top;
+  left: @left;
+  transform: translateX(-@left);
+}
 .posi(@left, @top) {
   position: absolute;
   top: @top;
@@ -84,12 +91,13 @@ p {
   color: #222;
 }
 
-.hoverFont:hover {  // 逐渐取代上面那个
+.hoverFont:hover {
+  // 逐渐取代上面那个
   color: #222;
 }
 
-.hoverBg:hover{
-  background-color: #F2F2F2;
+.hoverBg:hover {
+  background-color: #f2f2f2;
 }
 
 .singerHover:hover {
@@ -97,7 +105,17 @@ p {
 }
 
 // el-image 插槽里面元素撑满
-.imageFill{
+.imageFill {
   height: 100%;
   width: 100%;
+}
+
+.iconStyle {
+  font-size: 12px;
+  color: @bgColor;
+  border: 1px solid @bgColor;
+  border-radius: 3px;
+  display: inline-block;
+  height: 12px;
+  padding: 0px 2px;
 }
